style:iniciação de construção do form de cadastro

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     />
                 </div>
             </header>
-            <!--TODO: a preencher o form-->
+            <!--TODO: começar a preencher o form-->
             <article class="form1">
                 <form></form>
             </article>
