style:alteração de semântica no html e criação de formulário

--- a/index.html
+++ b/index.html
@@ -11,21 +11,55 @@
         <div class="principal">
             <header class="header-topo">
                 <div class="logo">
-                    <img src="/images/logo-urso.svg" alt="logo-bluebear" />
-                    <h1>
-                        faça parte da melhor escola de inglês da américa latina
-                    </h1>
+                    <img
+                        class="img-logo"
+                        src="/images/logo-urso.svg"
+                        alt="logo-bluebear"
+                    />
                 </div>
                 <div class="img-principal">
                     <img
+                        class="img-urso"
                         src="/images/Bear market-pana.svg"
                         alt="urso-paisagem"
                     />
                 </div>
             </header>
-            <!--TODO: começar a preencher o form-->
-            <article class="form1">
-                <form></form>
+            <article>
+                <form action="#" method="post" class="formlogin1">
+                    <legend>Dados Pessoais</legend>
+                    <label>nome completo</label>
+                    <input type="text" />
+                    <label>email</label>
+                    <input type="email" />
+                    <label for="">telefone</label>
+                    <input type="number" />
+                    <label for="">nome da mãe</label>
+                    <input type="text" />
+                    <label for="">nome do pai</label>
+                    <input type="text" />
+                    <label for="">genero</label>
+                    <input type="text" />
+                    <label for="">endereço</label>
+                    <input type="text" />
+                </form>
+                <form action="#" method="post" class="formlogin1">
+                    <legend>Dados Pessoais</legend>
+                    <label>nome completo</label>
+                    <input type="email " />
+                    <label>email</label>
+                    <input type="email" />
+                    <label for="">telefone</label>
+                    <input type="number" />
+                    <label for="">nome da mãe</label>
+                    <input type="text" />
+                    <label for="">nome do pai</label>
+                    <input type="text" />
+                    <label for="">genero</label>
+                    <input type="text" />
+                    <label for="">endereço</label>
+                    <input type="text" />
+                </form>
             </article>
         </div>
     </body>
